added cart page

--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,83 @@ html {
 	left: 0;
 	right: 0;
 }
+
+
+
+
+.checkout {
+	padding: 150px 1rem;
+	display: flex;
+ }
+  .checkout__cart {
+	flex-grow: 1;
+ }
+  .checkout__cart__ad {
+	width: 70vw;
+	padding-top: 0.2rem;
+ }
+  .checkout__cart__title {
+	display: flex;
+	justify-content: space-between;
+	margin-left: 0.5rem;
+	margin-top: 1rem;
+	border-bottom: 1px solid grey;
+ }
+  .checkout__cart__title span:first-child {
+	font-size: 1.6rem;
+	margin-bottom: 0.5rem;
+ }
+  .checkout__cart__title span:last-child {
+	align-self: flex-end;
+ }
+  .checkout__cart__message {
+	margin: 1rem;
+ }
+  .checkout__cart__message > p {
+	font-weight: 600;
+	font-size: 1.8rem;
+ }
+  .checkout__cart__subtotal {
+	text-align: right;
+	margin: 1rem auto;
+ }
+  .checkout__cart__subtotal span:first-child {
+	font-weight: 600;
+ }
+  .checkout__cart__subtotal span:last-child {
+	font-weight: 800;
+ }
+  /* .checkout__cart__card {
+	content: "";
+	height: 1px;
+	background: red;
+	width: 100%;
+	margin-left: 0.5rem;
+ } */
+  .checkout__subtotal {
+	border: 1px solid #ddd;
+	border-radius: 0.2rem;
+	background-color: #eaeded;
+	width: 18rem;
+	min-width: 18rem;
+	height: max-content;
+	margin: 1rem;
+	padding: 1rem;
+ }
+  .checkout__subtotal__title {
+	margin-bottom: 1rem;
+ }
+  .checkout__subtotal__title span:first-child {
+	margin-bottom: 1rem;
+	font-weight: 600;
+ }
+  .checkout__subtotal__title span:last-child {
+	margin-bottom: 1rem;
+	font-weight: 800;
+ }
+  .checkout__subtotal__button {
+	background-color: #f1c964 !important;
+	border: 1px solid #a88733 !important;
+	border-radius: 3px;
+	padding: 5px 45px;
+ }
